# ChangeLog for dev-python/jinja
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.46 2011/02/03 18:55:50 arfrever Exp $

  03 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  jinja-2.5.5.ebuild:
  Add "vim-syntax" USE flag (bug #273474).

  07 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -jinja-2.3.1.ebuild, -files/jinja2-2.3.1-python-3.2.patch,
  -files/jinja2-2.3.1-python-3.patch, -jinja-2.5.ebuild, -jinja-2.5.2.ebuild:
  Delete.

  07 Jan 2011; Brent Baude <ranger@gentoo.org> jinja-2.5.5.ebuild:
  Marking jinja-2.5.5 ppc for bug 347109

  31 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  jinja-2.5.5.ebuild:
  Fix building with Jython.

  27 Dec 2010; Brent Baude <ranger@gentoo.org> jinja-2.5.5.ebuild:
  Marking jinja-2.5.5 ppc64 for bug 347109

  18 Dec 2010; Raúl Porcel <armin76@gentoo.org> jinja-2.5.5.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #347109

  11 Dec 2010; Markus Meier <maekke@gentoo.org> jinja-2.5.5.ebuild:
  arm stable, bug #347109

  04 Dec 2010; Markos Chandras <hwoarang@gentoo.org> jinja-2.5.5.ebuild:
  Stable on amd64 wrt bug #347109

  03 Dec 2010; Christian Faulhammer <fauli@gentoo.org> jinja-2.5.5.ebuild:
  stable x86, bug 347109

  29 Nov 2010; Jeroen Roovers <jer@gentoo.org> jinja-2.5.5.ebuild:
  Stable for HPPA (bug #347109).

  27 Nov 2010; Raúl Porcel <armin76@gentoo.org> jinja-2.5.2.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #338913

*jinja-2.5.5 (23 Oct 2010)

  23 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -jinja-2.4.1.ebuild, -files/jinja2-2.4.1-object_type_repr.patch,
  -jinja-2.5.4.ebuild, +jinja-2.5.5.ebuild:
  Version bump.

  21 Oct 2010; Jeroen Roovers <jer@gentoo.org> jinja-2.5.2.ebuild:
  Stable for HPPA (bug #338913).

  18 Oct 2010; Jeroen Roovers <jer@gentoo.org> jinja-2.5.2.ebuild,
  jinja-2.5.4.ebuild:
  Marked ~hppa (bug #337663).
