@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/jinja
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.46 2011/02/03 18:55:50 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.47 2011/02/13 20:37:36 grobian Exp $
+
+  13 Feb 2011; Fabian Groffen <grobian@gentoo.org> jinja-2.5.5.ebuild:
+  Marked ~sparc-solaris and ~sparc64-solaris
 
   03 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   jinja-2.5.5.ebuild:
